# MIEI-UMINHO

./: CMakeLists.txt
1Ano_1Semestre/LI1/grupo113/: README.md
1Ano_1Semestre/LI1/grupo113/src/: FileUtils.hi  Main  Main.hi  Tarefa1.hi  Tarefa2.hi  Tarefa3.hi  Tarefa4.hi  Tarefa5.hi  Tarefa6.hi  TestesTarefa3.hi  Types.hi
1Ano_1Semestre/PF/Fichas/: Ficha1.hi  Ficha1.hs  Ficha2.hi  Ficha2.hs  Ficha3.hi  Ficha3.hs  Ficha4.hi  Ficha4.hs  Ficha5.hi  Ficha5.hs  Ficha6.hi  Ficha6.hs  Ficha7.hi  Ficha7.hs  Ficha8.hi  Ficha8.hs  Ficha9.hi  Ficha9.hs
1Ano_1Semestre/PF/TE/: Exame1617.hi  Exame1617.hs  Exame1718.hi  Exame1718.hs  Exame1819.hi  Exame1819.hs  Miniteste1.hi  Miniteste1.hs  Miniteste2.hi  Miniteste2.hs  Miniteste3.hi  Miniteste3.hs  Miniteste4.hi  Miniteste4.hs  Teste1718.hi  Teste1718.hs  Teste1819.hi  Teste1819.hs  Teste1920.hi  Teste1920.hs
1Ano_2Semestre/LI2/Ficha1/: Ficha1.c
1Ano_2Semestre/LI2/Ficha2/: Ficha2.c
1Ano_2Semestre/LI2/Ficha3/: Ficha3.c
1Ano_2Semestre/LI2/Ficha4/: Ficha4.c
1Ano_2Semestre/PI/Ficha1/: Ficha_TP1.c  horizontal.c  triangulo.c  vertical.c
