cmake_minimum_required(VERSION 3.17)
project(MIEI_UMINHO C)

set(CMAKE_C_STANDARD 11)

add_executable(MIEI_UMINHO
        1Ano_2Semestre/LI2/Ficha1/Ficha1.c
        1Ano_2Semestre/LI2/Ficha2/Ficha2.c
        1Ano_2Semestre/LI2/Ficha3/Ficha3.c
        1Ano_2Semestre/LI2/Ficha4/Ficha4.c
        1Ano_2Semestre/PI/Ficha1/Ficha_TP1.c
        1Ano_2Semestre/PI/Ficha1/horizontal.c
        1Ano_2Semestre/PI/Ficha1/triangulo.c
        1Ano_2Semestre/PI/Ficha1/vertical.c
        1Ano_2Semestre/PI/50Questions.c)
